[package]
name = "deadpool-diesel-async-example"
version = "0.4.0"
edition = "2021"

[dependencies]
deadpool = { version = "0.9.5", features = ["managed", "rt_tokio_1"] }
deadpool-diesel-async = { path = ".." }
diesel = { version = "2.0.0", default-features = true, features = ["extras", "numeric", "postgres"] }
diesel-async = { rev = "f3076b4", git = "https://github.com/sidechainme/diesel_async", default-features = false, features = ["postgres"] }
tokio = { version = "1.21.2", features = ["full"] }

[features]
default = []
db_conn_wrapper = []
